--- a/index.html
+++ b/index.html
@@ -23,5 +23,11 @@
             </ul>
         </address>
     </header>
+    <main>
+
+    </main>
+    <footer>
+        
+    </footer>
 </body>
 </html>
