add name changes

--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
         </address>
     </header>
     <main>
-
+        <p>
+            <h1>Effective Solutions for Your Business</h1>
+            <button type="button">Order Service</button>
+        </p>
+        <p></p>
+        <p></p>
     </main>
     <footer>
         
