--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
         </address>
     </header>
     <main>
-        <p>
+        <section>
             <h1>Effective Solutions for Your Business</h1>
             <button type="button">Order Service</button>
-        </p>
-        <p></p>
-        <p></p>
+        </section>
+        <section></section>
+        <section></section>
     </main>
     <footer>
         
