--- a/index.html
+++ b/index.html
@@ -61,7 +61,51 @@
           </li>
         </ul>
       </section>
-      <section></section>
+      <section>
+        <h2>Our Team</h2>
+        <ul>
+          <li>
+            <img
+              src="./img/img-1.png"
+              width="264"
+              height="260"
+              alt="Mark Guerrero"
+            />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img
+              src="./img/img-2.png"
+              width="264"
+              height="260"
+              alt="Tom Ford"
+            />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              src="./img/img-3.png"
+              width="264"
+              height="260"
+              alt="Camila Garcia"
+            />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./img/img-4.png"
+              width="264"
+              height="260"
+              alt="Daniel Wilson"
+            />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
     </main>
     <footer></footer>
   </body>
