--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <ul>
           <li>
             <img
-              src="./img/img-1.jpg"
+              src="./imges/img-1.jpg"
               width="264"
               height="260"
               alt="Mark Guerrero"
@@ -76,7 +76,7 @@
           </li>
           <li>
             <img
-              src="./img/img-2.jpg"
+              src="./imges/img-2.jpg"
               width="264"
               height="260"
               alt="Tom Ford"
@@ -86,7 +86,7 @@
           </li>
           <li>
             <img
-              src="./img/img-3.jpg"
+              src="./imges/img-3.jpg"
               width="264"
               height="260"
               alt="Camila Garcia"
@@ -96,7 +96,7 @@
           </li>
           <li>
             <img
-              src="./img/img-4.jpg"
+              src="./imges/img-4.jpg"
               width="264"
               height="260"
               alt="Daniel Wilson"
